# OH_AIGC_local

./: .gitignore  .gitmodules  README.md  build-profile.json5  log.txt  oh-package-lock.json5  oh-package.json5
.arkui-x/android/: local.properties  settings.gradle
.arkui-x/android/app/: build.gradle
.arkui-x/android/app/src/androidTest/java/com/mogu/OHAI/: ExampleInstrumentedTest.java
.arkui-x/android/app/src/main/: AndroidManifest.xml
.arkui-x/android/app/src/main/cpp/: CMakeLists.txt
.arkui-x/android/app/src/main/java/com/mogu/OHAI/: EntryEntryAbilityActivity.java  MyApplication.java
.arkui-x/android/app/src/main/res/values/: strings.xml
.arkui-x/android/app/src/test/java/com/mogu/OHAI/: ExampleUnitTest.java
.arkui-x/ios/app/: AppDelegate.m
.arkui-x/ios/app.xcodeproj/: project.pbxproj
AppScope/: app.json5
AppScope/resources/base/element/: color.json  string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5  syscap.json
entry/src/main/cpp/: CMakeLists.txt  chat.cpp  clip.cpp  common.cpp  frameworkLlama.cpp  frameworkLlama.h  fwMNN.cpp  fwMNN.hpp  llm_demo.cpp  mnn_wrapper.cpp  mtmd.cpp  napi_init.cpp  sampling.cpp
entry/src/main/cpp/include/: mtmd.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/types/libmnn_wrapper/: MnnWrapper.d.ts  oh-package.json5
entry/src/main/ets/common/: ChatConfig.ets  Constants.ets
entry/src/main/ets/common/database/: Rdb.ets
entry/src/main/ets/common/database/tables/: ChatHistoryTable.ets  ModelPathTable.ets  SessionTable.ets
entry/src/main/ets/common/utils/: Logger.ets
entry/src/main/ets/component/: Chat.ets  ChatDataSource.ets  HistorySideBar.ets
entry/src/main/ets/components/: ChatDataSource.ets  HistorySidebar.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: Conversation.ets  Message.ets
entry/src/main/ets/pages/: Index.ets  PromptSetting.ets  chatpage.ets  setting.ets
entry/src/main/ets/services/: MnnService.ets  TextGenerationService.ets
entry/src/main/ets/utils/: MindsporeUtil.ets  StorageUtil.ets
entry/src/main/ets/viewmodel/: ChatHistoryData.ets  ConstantsInterface.ets  ModelPath.ets  SessionData.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
oh_modules/@changwei/chatui/: BuildProfile.ets  CHANGELOG.md  ResourceTable.txt  oh-package-lock.json5  oh-package.json5
oh_modules/@changwei/chatui/src/main/: module.json
oh_modules/@changwei/chatui/src/main/ets/components/: Chat.ets
